# redlobster

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  README2.md  actions.txt  main.cpp  simple_cross.cpp  simple_cross.h  test.sh  valgrind-out.txt
.github/workflows/: cmake-single-platform.yml
order_book/: CMakeLists.txt  level_map.h  order.cpp  order.h  order_book.cpp  order_book.h
test/: garbage_actions.txt  gen_actions.py  test.h  test_find_oid_after_many_pushes.cpp  test_find_order_with_oid_after_realloc.cpp  test_full_fills_asc_asc.cpp  test_full_fills_asc_desc.cpp  test_full_fills_only.cpp  test_generators.cpp  test_generators.h  test_kill_to_empty.cpp  test_partial_fill.cpp  test_utils.cpp  test_utils.h
util/: log.h
